# ros2_termproject

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ramen_interfaces/share/ramen_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ramen_interfaces/share/ramen_interfaces/action/: RequestRemake.idl  ServeRamen.idl  ServeRamen.json
install/ramen_kitchen/lib/ramen_kitchen/: kitchen_node
install/ramen_kitchen/share/ramen_kitchen/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ramen_serving/lib/ramen_serving/: robot_node
install/ramen_serving/share/ramen_serving/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ramen_table/lib/ramen_table/: count_node  customer_node  order1_node  order_node
install/ramen_table/share/ramen_table/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ramen_interfaces/: CMakeLists.txt
ramen_interfaces/msg/: CookedRamen.msg  RamenOrder.msg
ramen_kitchen/: setup.py
ramen_serving/: setup.cfg  setup.py
ramen_serving/ramen_serving/: robot_node.py
ramen_table/: setup.cfg  setup.py
src/ramen_bringup/: package.xml  setup.cfg  setup.py
src/ramen_bringup/launch/: ramen_system.launch.py
src/ramen_interfaces/: CMakeLists.txt  package.xml
src/ramen_interfaces/action/: RequestRemake.action  ServeRamen.action
src/ramen_interfaces/msg/: RamenOrder.msg
src/ramen_interfaces/srv/: ProcessPayment.srv
src/ramen_kitchen/: setup.cfg
src/ramen_serving/: package.xml
src/ramen_table/: setup.py
src/ramen_table/ramen_table/: calculator_node.py  order1_node.py  order_node.py
(+86 files in other folders)
